@@ -226,7 +226,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Nanjing>
+    <https://github.com/michal-josef-spacek/Map-Tube-Nanjing>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
