@@ -1,4 +1,5 @@
 0.06
+ - Update author github username.
 
 0.05 2025-01-21T21:04:36+01:00
  - Add EXAMPLE5 section to doc.
